# UVEngine

./: CMakeLists.txt
src/: main.cpp
src/assets/maps/: Test.json
src/engine/: camera.cpp  display.cpp  render.cpp
src/engine/renderer/: BaseRenderer.cpp
src/engine/renderer/utils/: IndexBuffer.cpp  VertexBuffer.cpp
src/engine/texture/: texture.cpp
src/engine/util/: GFXUtil.cpp
src/game/hook/: GameEngine.cpp
src/game/player/: Player.cpp
src/game/tile/: manager.cpp  map.cpp
src/include/: GFXUtil.h  display.h  render.h
src/include/data/: ncolor.h  ninput.h  nkeyboard.h  nmouse.h  nscroll.h  nwindow.h
src/include/engine/: camera.h  display.h  render.h
src/include/engine/data/: ncolor.h  ngraphics.h  nmouse.h  nscroll.h  nwindow.h
src/include/engine/renderer/: BaseRenderer.h
src/include/engine/renderer/utils/: IndexBuffer.h  VertexBuffer.h
src/include/engine/texture/: texture.h
src/include/engine/util/: EngineUtil.h  GFXUtil.h  umath.h
src/include/game/animation/: animation.h
src/include/game/data/: gsize.h  pos.h  tile.h
src/include/game/hook/: GameEngine.h
src/include/game/player/: Player.h
src/include/game/tile/: manager.h  map.h
src/include/util/: GFXUtil.h
